# IntelliJob

./: .gitignore  README.md  intellijob.db  main.py  pyproject.toml  visualize_graph.py
Frontend/: .gitignore  README.md  index.html  package-lock.json
Frontend/src/api/: client.ts
Frontend/src/app/: routes.tsx
Frontend/src/imports/: FRONTEND_GUIDE.md
src/agents/: adzuna_tool.py  graph.py  nodes.py  state.py
src/api/: auth.py  routes.py
src/auth/: dependencies.py  security.py
src/database/: core.py  models.py
src/services/: email_service.py  gap_analyzer.py  latex_service.py  preference_analyzer.py  resume_parser.py  scheduler.py
version2/: .gitignore  compile_out.txt  compile_txt_to_pdf.py  fix_out.txt  fix_resume.py  intelliJobs.db  migrate.py  package-lock.json  query_db.py  requirements.txt  test_agent.py  test_latex.py  test_out.txt
version2/app/: main.py
version2/app/agents/: discovery_agent.py  filtering_agent.py  interview_agent.py  other_agents.py  preference_agent.py  ranking_agent.py  resume_agent.py
version2/app/auth/: security.py
version2/app/database/: connection.py
version2/app/graph/: state.py  workflow.py
version2/app/models/: schema.py
version2/app/routes/: auth.py  extension.py  jobs.py  resume.py  user.py  views.py
version2/app/services/: github_service.py  resume_parser.py
version2/app/templates/: base.html  dashboard.html  index.html  interview.html  jobs.html  login.html  register.html
version2/assets/: resumeTemplate.tex
version2/extension/: manifest.json
version2/extension/background/: background.js
(+15 files in other folders)
