[project]
name = "intellijob"
version = "0.1.0"
description = "Autonomous AI Career Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "langgraph>=0.0.60",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.7",
    "playwright>=1.44.0",
    "python-telegram-bot>=21.1.1",
    "google-api-python-client>=2.129.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
    "email-validator>=2.3.0",
]
